--- a/client/src/app/pages/universe/universe.component.html
+++ b/client/src/app/pages/universe/universe.component.html
@@ -1,1 +1,38 @@
-<p>universe works!</p>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Universes</mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+        <table mat-table
+        [dataSource]="this.dataSource">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let item">{{ item.name }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let item">
+                    <button mat-icon-button
+                    matTooltip="Edit universe"
+                    type="button"
+                    [disabled]="this.loading"
+                    (click)="this.setUniverse(item)">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                    </button>
+
+                    <button mat-icon-button
+                    matTooltip="Delete universe"
+                    type="button"
+                    [disabled]="this.loading">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="this.cols"></tr>
+            <tr mat-row *matRowDef="let row; columns: this.cols"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
