--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,4 @@
+@use './stylings/index.scss';
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
