--- a/client/src/app/pages/universe/universe.component.html
+++ b/client/src/app/pages/universe/universe.component.html
@@ -22,7 +22,7 @@
             </ng-container>
 
             <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <th mat-header-cell *matHeaderCellDef width="180">Actions</th>
                 <td mat-cell *matCellDef="let item">
                     <button mat-icon-button
                     matTooltip="Edit universe"
