Changes: - Added a modal to create/update a character.

--- a/client/src/app/pages/character/character.component.html
+++ b/client/src/app/pages/character/character.component.html
@@ -1,1 +1,18 @@
-<p>character works!</p>
+<mat-card>
+    <mat-card-header>
+        <app-flex-card-header>
+            <mat-card-title>Characters</mat-card-title>
+
+            <button mat-icon-button
+            color="accent"
+            type="button"
+            (click)="this.createCharacter()">
+                <i class="fa-solid fa-plus"></i>
+            </button>
+        </app-flex-card-header>
+    </mat-card-header>
+
+    <mat-card-content>
+        joderrrr
+    </mat-card-content>
+</mat-card>
